--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "mongodb": "^3.6.6",
     "next": "10.2.0",
+    "next-auth": "^3.23.0",
+    "next-share": "^0.4.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "use-dark-mode": "^2.3.1"
   }
 }
