--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-share": "^0.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.32.13",
     "use-dark-mode": "^2.3.1"
   }
 }
